[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Interface/ChatTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/SharedAssets/Textures/UI/IconTest_32px.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interface/StyleBoxes/ChatMainBGPanel.tres" type="StyleBox" id=6]
[ext_resource path="res://Tree/Interface/Hud/Chat/ChatInput.gd" type="Script" id=7]
[ext_resource path="res://Tree/Interface/Hud/Chat/Chat.gd" type="Script" id=8]
[ext_resource path="res://Tree/Interface/Hud/Chat/ChatDisplay.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Visibility"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Chat" type="PanelContainer" groups=[
"Chat",
]]
anchor_top = 0.8
anchor_right = 0.3
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 1
mouse_filter = 2
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 574.0
margin_bottom = 216.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="V"]
margin_right = 572.0
margin_bottom = 39.0

[node name="MarginContainer" type="MarginContainer" parent="V/HBoxContainer"]
margin_right = 65.0
margin_bottom = 39.0

[node name="TextureButton" type="TextureButton" parent="V/HBoxContainer/MarginContainer"]
margin_right = 65.0
margin_bottom = 39.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="V/HBoxContainer/MarginContainer"]
margin_right = 65.0
margin_bottom = 39.0
text = "Global"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="V/HBoxContainer"]
margin_left = 69.0
margin_right = 126.0
margin_bottom = 39.0

[node name="TextureButton" type="TextureButton" parent="V/HBoxContainer/MarginContainer2"]
margin_right = 57.0
margin_bottom = 39.0
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="V/HBoxContainer/MarginContainer2"]
margin_right = 57.0
margin_bottom = 39.0
text = "Local"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="V/HBoxContainer"]
margin_left = 130.0
margin_right = 536.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="V/HBoxContainer"]
margin_left = 540.0
margin_right = 572.0
margin_bottom = 39.0

[node name="VBoxContainer" type="VBoxContainer" parent="V/HBoxContainer/MarginContainer3"]
margin_right = 32.0
margin_bottom = 39.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="V/HBoxContainer/MarginContainer3/VBoxContainer"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="HelpPage" type="RichTextLabel" parent="V"]
visible = false
margin_right = 572.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "'Enter' to start inputing text. 'Enter' again to send message.
'T' to scroll chat display up.
'G' to scroll chat display down.
'CTRL+V' to toggle Chat between max and min vertical size.
'CTRL+C' to expand Chat to the right.
'CTRL+X' to shrink Chat to the left.
'CTRL+1' to expand Chat upwards.
'CTRL+Q' to shrink Chat downwards.
'CTRL+2' to hide Chat.
'CTRL+H' to go back to Chat Display."

[node name="Tabs" type="TabContainer" parent="V"]
margin_top = 43.0
margin_right = 572.0
margin_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="Public" type="RichTextLabel" parent="V/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
script = ExtResource( 9 )

[node name="Messages" type="RichTextLabel" parent="V/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
script = ExtResource( 9 )

[node name="ChatInput" type="LineEdit" parent="V"]
margin_top = 193.0
margin_right = 572.0
margin_bottom = 214.0
mouse_filter = 2
editable = false
placeholder_text = "Press 'CTRL+H' for help."
placeholder_alpha = 1.0
script = ExtResource( 7 )

[node name="ChatAnims" type="AnimationPlayer" parent="."]
anims/Visibility = SubResource( 1 )
[connection signal="tab_changed" from="V/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="meta_clicked" from="V/Tabs/Public" to="." method="_link_clicked"]
[connection signal="meta_clicked" from="V/Tabs/Messages" to="." method="_link_clicked"]
[connection signal="text_entered" from="V/ChatInput" to="." method="_on_LineEdit_text_entered"]
